Am terminat proiectul Coffeeroasters in proportie de 81%

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,4 @@
 @import "./global.css";
-
 :root {
   --highlight__bg--1: #fdd6ba;
 }
@@ -401,4 +400,5 @@
   .how .title {
     text-align: center;
   }
-} /*# sourceMappingURL=home.css.map */
+}
+/* test *//*# sourceMappingURL=home.css.map */
