--- a/styles/subscribe.css
+++ b/styles/subscribe.css
@@ -403,4 +403,5 @@
     padding: 4rem 1rem;
     align-items: center;
   }
-}/*# sourceMappingURL=subscribe.css.map */
+}
+/* test *//*# sourceMappingURL=subscribe.css.map */
