--- a/styles/about.css
+++ b/styles/about.css
@@ -192,7 +192,7 @@
     height: 100%;
     width: 100%;
     -o-object-fit: cover;
-    object-fit: cover;
+       object-fit: cover;
   }
   .commitment .text {
     width: 50%;
@@ -216,9 +216,9 @@
   }
   .quality .image img {
     -o-object-fit: cover;
-    object-fit: cover;
+       object-fit: cover;
     -o-object-position: bottom;
-    object-position: bottom;
+       object-position: bottom;
     width: 100%;
     height: 100%;
     transform: translateY(-175px);
@@ -304,4 +304,5 @@
   .quality .image img {
     transform: translateY(-65px);
   }
-} /*# sourceMappingURL=about.css.map */
+}
+/* test *//*# sourceMappingURL=about.css.map */
