--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -1,5 +1,4 @@
 @import url("./global.css");
-
 :root {
   --tel__border--1: #ccc;
 }
@@ -23,9 +22,9 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="tel"] {
+input[type=text],
+input[type=email],
+input[type=tel] {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
@@ -44,4 +43,6 @@ button {
 
 button:hover {
   background: var(--primary-btn-hover);
-} /*# sourceMappingURL=checkout.css.map */
+}
+
+/* test *//*# sourceMappingURL=checkout.css.map */
