--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap";
 @import "https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
-
 :root {
   --hover__txt--1: #fdd6ba;
   --search__txt--2: #83888f;
@@ -184,11 +183,7 @@ nav .mobile {
   width: 100%;
   padding: 4rem 2rem;
   z-index: 9999;
-  background-image: linear-gradient(
-    180deg,
-    var(--nav__bg__img--5) 45%,
-    var(--nav__bg__img--6) 100%
-  );
+  background-image: linear-gradient(180deg, var(--nav__bg__img--5) 45%, var(--nav__bg__img--6) 100%);
   transition: 0.2s all;
 }
 nav .mobile ul {
@@ -424,4 +419,5 @@ nav .mobile.open {
   .modal .price:not(.mobile) {
     display: none;
   }
-} /*# sourceMappingURL=global.css.map */
+}
+/* test *//*# sourceMappingURL=global.css.map */
