--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -45,4 +45,4 @@ button:hover {
   background: var(--primary-btn-hover);
 }
 
-/* test *//*# sourceMappingURL=checkout.css.map */
+/* test */ /* test *//*# sourceMappingURL=checkout.css.map */
