--- a/styles/global.css
+++ b/styles/global.css
@@ -420,4 +420,4 @@ nav .mobile.open {
     display: none;
   }
 }
-/* test *//*# sourceMappingURL=global.css.map */
+/* test */ /* test *//*# sourceMappingURL=global.css.map */
