--- a/styles/home.scss
+++ b/styles/home.scss
@@ -15,6 +15,29 @@
   --how__border--9: #0e8784;
   --how__txt--10: #fdd6ba;
 }
+
+#confirmation-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Opacitate de 50% */
+  z-index: 9999; /* Asigurați-vă că mesajul de confirmare este întotdeauna deasupra restului conținutului */
+}
+
+/* Stilizare mesaj de confirmare */
+#confirmation-message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 10000; /* Asigurați-vă că mesajul de confirmare este întotdeauna deasupra fundalului semi-transparent */
+}
 .hero {
   min-height: 600px;
   background: url("../images/hero.png");
@@ -417,4 +440,3 @@
     }
   }
 }
-/* test */ /* test */
