--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,8 +1,4 @@
 @import "./global.css";
-
-:root {
-  --highlight__bg--1: #fdd6ba;
-}
 :root {
   --hero__txt--1: #fefcf7;
   --packs__txt--2: #333d4b;
@@ -14,6 +10,10 @@
   --how__border__top--8: #fdd6ba;
   --how__border--9: #0e8784;
   --how__txt--10: #fdd6ba;
+  --confirmation__bg--1: rgba(0, 0, 0, 0.5);
+  --confirmation__bg--2: white;
+  --confirmation__box__shadow--3: rgba(0, 0, 0, 0.2);
+  --highlight__bg--1: #fdd6ba;
 }
 
 #confirmation-overlay {
@@ -22,22 +22,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Opacitate de 50% */
-  z-index: 9999; /* Asigurați-vă că mesajul de confirmare este întotdeauna deasupra restului conținutului */
+  background-color: var(--confirmation__bg--1);
+  z-index: 9999;
 }
 
-/* Stilizare mesaj de confirmare */
 #confirmation-message {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: var(--confirmation__bg--2);
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  z-index: 10000; /* Asigurați-vă că mesajul de confirmare este întotdeauna deasupra fundalului semi-transparent */
+  box-shadow: 0 0 10px var(--confirmation__box__shadow--3);
+  z-index: 10000;
 }
+
 .hero {
   min-height: 600px;
   background: url("../images/hero.png");
