--- a/styles/signin.scss
+++ b/styles/signin.scss
@@ -10,10 +10,13 @@
   --span__txt--9: #4d4d4d;
   --a__txt--10: #000000;
   --fa__txt--11: #ef3b3a;
+  --base_link__txt--2: #ffffff;
+  --disabled__bg--1: #979797;
+  --hover__txt--1: #fdd6ba;
 }
 body {
   background: var(--body__bg--1);
-  font-family: "Roboto", sans-serif;
+  font-family: "Barlow", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: var(--body__bg--2);
@@ -32,6 +35,48 @@ body {
     text-align: center;
     box-shadow: 0 0 20px 0 var(--form__box__shadow--4),
       0 5px 5px 0 var(--form__box__shadow--5);
+
+    a {
+      text-decoration: none;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: var(--hover__txt--1);
+      }
+    }
+
+    .base_link {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 20px;
+      font-weight: bolder;
+      font-size: 1.7rem;
+      font-family: "fraunces, sans-serif";
+      color: var(--base_link__txt--2);
+      img {
+        width: 24px;
+      }
+    }
+
+    label {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      color: #83888f;
+      font-weight: 700;
+      font-family: "Barlow", sans-serif;
+
+      input[type="checkbox"] {
+        margin-top: 15px;
+        cursor: pointer;
+        width: 1em;
+        height: 1em;
+      }
+    }
+
     input {
       font-family: "Barlow", sans-serif;
       outline: 0;
@@ -42,6 +87,7 @@ body {
       padding: 15px;
       box-sizing: border-box;
       font-size: 14px;
+      border-radius: 4px;
     }
     button {
       font-family: "Fraunces", sans-serif;
@@ -53,6 +99,7 @@ body {
       padding: 15px;
       color: var(--body__bg--2);
       font-size: 14px;
+      border-radius: 4px;
       transition: all 0.3s ease;
       cursor: pointer;
       &:hover {
@@ -64,7 +111,12 @@ body {
       &:focus {
         background: var(--hover__bg--6);
       }
+      &:disabled {
+        background-color: var(--disabled__bg--1);
+        cursor: not-allowed;
+      }
     }
+
     .message {
       margin: 15px 0 0;
       color: var(--message__txt--7);
@@ -121,4 +173,3 @@ body {
     }
   }
 }
-/* test */ /* test */
