--- a/styles/home.scss
+++ b/styles/home.scss
@@ -114,11 +114,10 @@
       }
       img {
         margin: auto;
-
         transition: transform 0.3s ease;
 
-        .hover-animation {
-          transform: scale(1.05);
+        &:hover {
+          transform: scale(1.1);
         }
       }
     }
